--- a/exercises/scss/_config.scss
+++ b/exercises/scss/_config.scss
@@ -1,4 +1,5 @@
 $primary-color: #444;
+$secondary-color: rgb(177, 193, 37);
 $backgroundImage: url(/dist/img/background.jpg);
 $useBgImg: true;
 
@@ -19,5 +20,35 @@ $useBgImg: true;
             background-color: rgba($primary-color, 0.8);
             z-index: -1;
         }
+    }
+}
+
+@mixin slideTransition {
+    transition: all 0.35s linear;
+}
+
+// Media queries
+
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mediaLg {
+    @media screen and (min-width: 769px) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+@mixin mediaXl {
+    @media screen and (min-width: 1171px) {
+        @content;
     }
 }
