--- a/exercises/scss/_mobile.scss
+++ b/exercises/scss/_mobile.scss
@@ -39,6 +39,17 @@
             width: 25vh;
         }
     }
+
+    .about-info{
+        grid-template-areas: 
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+
+        grid-template-columns: 1fr;
+    }
 }
 
 @include mediaSm {
