lesson 6 - Work and Contact Pages

--- a/exercises/scss/_mobile.scss
+++ b/exercises/scss/_mobile.scss
@@ -1,9 +1,13 @@
 @include mediaXl {
-
+    .projects{
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 @include mediaLg {
-    
+    .projects{
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 @include mediaMd {
@@ -50,8 +54,15 @@
 
         grid-template-columns: 1fr;
     }
+
+    .projects{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
+
 @include mediaSm {
-    
+    .projects{
+        grid-template-columns: 1fr;
+    }
 }
