--- a/exercises/scss/main.scss
+++ b/exercises/scss/main.scss
@@ -8,6 +8,15 @@ body{
     color: set-text-color($primary-color);
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
+    li{
+        list-style: none;
+    }
+    a{
+        text-decoration: none;
+        color: inherit;
+    }
 }
 
 h1{
@@ -88,6 +97,87 @@ main{
         background: lighten($primary-color, 5);
         padding: 0.5rem;
         border-bottom: 5px solid $secondary-color;
+    }
+}
+
+
+// Work page 
+#work{
+    padding-top: 1vh;
+}
+.projects{
+    display: grid;
+    grid-gap: 0.7rem;
+    grid-template-columns: repeat(3, 1fr);
+
+    .item a img{
+        width: 100%;
+        border: 3px solid white;
+
+        &:hover{
+            opacity: 0.5;
+            border: 3px solid $secondary-color;
+            @include slideTransition;
+        }
+    }
+
+}
+
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+
+    &:hover{
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+}
+
+.btn-dark{
+    @extend .btn;
+    background: darken($primary-color, 50);
+    color: #fff;
+}
+
+.btn-light{
+    @extend .btn;
+    background: lighten($primary-color, 50);
+    color: #fff;
+}
+
+//Contact page
+#contact{
+    padding-top: 1vh;
+}
+.boxes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div{
+        font-size: 2rem;
+        border: 3px solid white;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include slideTransition;
+
+        span{
+            color: $secondary-color;
+        }
+
+        &:hover{
+            padding: 0.5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+            span {
+                color: set-text-color($secondary-color);
+                @include slideTransition;
+            }
+        }
     }
 }
 
