seasons and responsiveness added

--- a/project/scss/_menu.scss
+++ b/project/scss/_menu.scss
@@ -37,6 +37,7 @@
     right: 0;
     visibility: hidden;
     height: 100vh;
+    z-index: 98;
     &.show{
         visibility: visible;
     }
@@ -117,7 +118,7 @@
 
 }
 
-@for $x from 1 to 5 {
+@for $x from 1 to 6 {
     .nav-item:nth-child(#{$x}){
         transition-delay: $x * 0.1s;
     }
