--- a/project/scss/_menu.scss
+++ b/project/scss/_menu.scss
@@ -95,7 +95,7 @@
         .logo{
             width: 20vw;
             height: 18vh;
-            background-image: url('/dist/img/logo.png');
+            background: $logo;
             background-repeat: no-repeat;
             background-size: cover;
             border: 3px solid $secondary-color;
